// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Volume button Setting volume updates button icon 1`] = `
<svg
  viewBox="0 0 100 100"
>
  <path
    d="M 10 35 h 20 l 25 -20 v 65 l -25 -20 h -20 z"
    fill="white"
    stroke="none"
  />
  <g>
    <path
      d="M 62 32.5 a 1,1 0 0,1 0,30"
      fill="white"
      stroke="none"
    />
    <path
      d="M 62 15 a 1,1 0 0,1 0,65 v -10 a 10,10 0 0,0 0,-45 v -10 z"
      fill="white"
      stroke="none"
    />
  </g>
</svg>
`;

exports[`Volume button Setting volume updates button icon 2`] = `
<svg
  viewBox="0 0 100 100"
>
  <path
    d="M 10 35 h 20 l 25 -20 v 65 l -25 -20 h -20 z"
    fill="white"
    stroke="none"
  />
  <g>
    <path
      d="M 62 32.5 a 1,1 0 0,1 0,30"
      fill="white"
      stroke="none"
    />
  </g>
</svg>
`;

exports[`Volume button Setting volume updates button icon 3`] = `
<svg
  viewBox="0 0 100 100"
>
  <path
    d="M 10 35 h 20 l 25 -20 v 65 l -25 -20 h -20 z"
    fill="white"
    stroke="none"
  />
  <g />
</svg>
`;
